# LongGangTrader

./: .gitignore  LICENSE  ProjectDoc.md  README.md  RUST_INSTALLATION_GUIDE.md  pyproject.toml  readme.md  requirements.txt  run.py
.dvc/: config
barra/: barra.py  pipeline.py  regression.py  run.ipynb  utils.py
cpp_core/: CMakeLists.txt  set_up.py
cpp_core/include/: backtest.h  utils.h
cpp_core/src/: backtest.cpp  bindings.cpp  utils.cpp
data/: AttentionGRU1129_20day_MSE_labels_20day_lr_0.003_epoch28_valIC0.0602.pt  baostock_data_filled.parquet.dvc  test_features.bin.dvc  test_features.bin.json  test_ticker_list.json  test_tradedate_list.json
data/results/: portfolio_history.csv
longgang_trader/: __init__.py  test.ipynb  test.py  test_import.py  utils.py
longgang_trader/alpha/: .gitignore  __init__.py  dataloader.py  dl_model_factor.py  dl_model_factor.py.dvc  factor_calculator.py  factor_combiner.py  factor_testing.py  gru_attention.py  gru_attention.py.dvc
longgang_trader/backtesting/: __init__.py  backtester.py  backtester_cpp.py  strategy.py
longgang_trader/data/: __init__.py  data_loader.py  preprocessor.py
longgang_trader/optimize/: __init__.py  constraints.py  optimizer.py
notebooks/: 1_LoadAlpha158.ipynb  2_ProcessLabels.ipynb  2_reindex_sap.ipynb  3_SplitDataset.py  4_Training.py  5_Inference.py  6_CalDailyWeight.ipynb  AttentionGRU.pt  Config.yml  DailyAlphaDataloader.py  factor_development_example.ipynb  plot_grouped_ret.py  readme.md  test_data.parquet.dvc  test_notebook.ipynb
rust_core/: Cargo.toml
rust_core/src/: lib.rs  main.rs  utils.rs
test/: test1.ipynb
tests/: __init__.py  all_in_one.ipynb  full_workflow.ipynb  test_data_loader.py
