[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
polars = { version = "0.52.0", features = ["lazy", "timezones", "parquet", "csv"] }
pyo3-polars = { version = "0.25.0", features = ["lazy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "0.6"
